# stock-price-predict

./: .gitignore  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
data/: AAPL_10y_1d_raw_20260413T071514Z.csv
notebooks/: 02_exploratory_data_analysis.ipynb
notebooks/data/: AAPL_10y_1d_raw_20260413T070634Z.csv
outputs/: evaluation_metrics.json  reconstructed_prices.csv
src/: __init__.py  api.py  data_loader.py  dataset.py  evaluate.py  feature_engineering.py  inference.py  inference_config.py  model.py  preprocess.py  train.py
