[project]
name = "stock-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"pandas>=2.2",
	"matplotlib>=3.8",
	"seaborn>=0.13",
	"yfinance>=1.2",
	"numpy>=1.26",
	"scikit-learn>=1.5",
	"joblib>=1.4",
	"tensorflow>=2.16",
	"fastapi>=0.116",
	"uvicorn>=0.35",
	"streamlit>=1.40",
	"plotly>=5.20",
]
